修改类常理调用及清理无用model

--- a/web/application/admin/view/product/list_pass.html
+++ b/web/application/admin/view/product/list_pass.html
@@ -326,7 +326,7 @@
     </span>
 </script>
 <script>
-    function ajaxGetCategory(id,elm,htmlType,lineType){
+    function ajaxGetCategory(id,elm,htmlType){
         $.ajax({
             type:'get',
             url:'?s=admin/product/getCategoryNextLevelList&parentId='+id,
