--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -81,7 +81,7 @@
                                     <label for="" class="col-md-2 pull-right">封面图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="cover-file" name="file" type="file"  data-show-caption="true">
-                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="{$row.icon}"  data-path="{$row.iconPath}"/>
+                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
