'企业认证报表数据'

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -67,7 +67,7 @@
                                        ['name'=>'供应商交易报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
                                        ['name'=>'采购商交易报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
                                        ['name'=>'订单数据报表','url'=>url('admin/product/listpass'),'icon'=>'fa-database'],
-                                       ['name'=>'企业注册认证数据','url'=>url('admin/product/listpass'),'icon'=>'fa-database']
+                                       ['name'=>'企业注册认证数据','url'=>url('admin/report/company'),'icon'=>'fa-database']
                                    ]
                   ]
             ],
