'修改上传配置'

--- a/web/application/admin/view/product/create.html
+++ b/web/application/admin/view/product/create.html
@@ -461,7 +461,7 @@
                 maxFileCount: 1,
                 uploadExtraData: function(previewId, index) {   //额外参数的关键点
                     var obj = {};
-                    obj.type = 'goods_thumb';
+                    obj.type = 'goods';
                     return obj;
                 }
             });
